new file:   public/Host/img/people.png 	new file:   public/Host/index.html 	new file:   public/Host/module.js 	new file:   public/Host/script.js 	new file:   public/Host/style.css 	modified:   public/Styles/style.css 	new file:   public/addAdmin/index.html 	new file:   public/addAdmin/module.js 	new file:   public/addAdmin/script.js 	new file:   public/addAdmin/style.css 	new file:   public/admin/README.md 	new file:   public/admin/img/people.png 	new file:   public/admin/index.html 	new file:   public/admin/module.js 	new file:   public/admin/script.js 	new file:   public/admin/style.css 	modified:   public/index.html 	new file:   public/insertForm/firebase.js 	new file:   public/insertForm/index.html 	new file:   public/insertForm/insertScript.js 	new file:   public/insertForm/script.js 	new file:   public/insertForm/scriptAdmin.js 	new file:   public/insertForm/style.css 	new file:   public/insertForm/styleAdminPanel.css 	modified:   public/menu/assets/js/module.js 	modified:   public/menu/assets/js/script.js 	modified:   public/menu/index.html 	new file:   public/message/index.html 	new file:   public/message/script.js 	new file:   public/message/style.css 	modified:   public/module.js 	new file:   public/settings/index.html 	new file:   public/settings/script.js 	new file:   public/settings/style.css

--- a/public/Styles/style.css
+++ b/public/Styles/style.css
@@ -368,6 +368,29 @@ section .button button:hover {
   transform: translate(-50%, -50%) scale(1);
 }
 
+/* Explore Form Style */
+.home .home_content::before{
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 100;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.5s ease-out;
+}
+
+.home .home_content.showForm::before{
+  opacity: 1;
+  pointer-events: auto;
+}
+.home .home_content.showForm .exploreForm-container{
+  opacity: 1;
+  pointer-events: auto;
+  transform: translate(-50%, -50%) scale(1);
+}
+
 /* Sign Up Form */
 .signup_form {
   display: none;
